<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_element"
    android:layout_width="300dp"
    android:layout_height="100dp"
    android:orientation="vertical" android:background="@drawable/widget_background">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/abfrage_aktualisieren"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:layout_marginBottom="5dp" 
        android:layout_marginLeft="5dp" 
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/ja" android:background="@drawable/dualis_button" android:padding="15dp" android:layout_marginLeft="10dp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/nein" android:background="@drawable/dualis_button" android:padding="15dp" android:paddingRight="20dp" android:layout_marginRight="10dp"/>

    </LinearLayout>

</LinearLayout>