<?xml version="1.0" encoding="utf-8"?>

	<ScrollView
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/scrollView1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >

	    
	        <TableLayout
	            android:id="@+id/tableLayout1"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" >

	            <TableRow
	                android:id="@+id/tableRow1"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content">

	                <TextView
	                    android:id="@+id/textView01"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_marginBottom="1dp"
	                    android:layout_marginLeft="1dp"
	                    android:layout_marginRight="1dp"
	                    android:layout_weight="0.5"
	                    android:background="@drawable/grauverlauf"
	                    android:text="@string/monday"
	                    android:textAppearance="?android:attr/textAppearanceLarge"
	                    android:textColor="#000" />

	                <TextView
	                    android:id="@+id/textView02"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_marginBottom="1dp"
	                    android:layout_marginLeft="1dp"
	                    android:layout_marginRight="1dp"
	                    android:layout_weight="0.5"
	                    android:background="@drawable/grauverlauf"
	                    android:text="@string/tuesday"
	                    android:textAppearance="?android:attr/textAppearanceLarge"
	                    android:textColor="#000" />
	            </TableRow>

	            <TableRow
	                android:id="@+id/tableRow3"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content" >

	                <LinearLayout
	                    android:id="@+id/linearLayout2"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="0.5"
	                    android:orientation="vertical" >
	                </LinearLayout>

	                <LinearLayout
	                    android:id="@+id/linearLayout3"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="0.5"
	                    android:orientation="vertical" >
	                </LinearLayout>
	            </TableRow>

	            <TableRow
	                android:id="@+id/tableRow4"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content" >

	                <TextView
	                    android:id="@+id/textView03"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_marginLeft="1dp"
	                    android:layout_marginRight="1dp"
	                    android:layout_weight="0.5"
	                    android:background="@drawable/grauverlauf"
	                    android:text="@string/wednesday"
	                    android:textAppearance="?android:attr/textAppearanceLarge"
	                    android:textColor="#000" />

	                <TextView
	                    android:id="@+id/textView04"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_marginBottom="1dp"
	                    android:layout_marginLeft="1dp"
	                    android:layout_marginRight="1dp"
	                    android:layout_weight="0.5"
	                    android:background="@drawable/grauverlauf"
	                    android:text="@string/thursday"
	                    android:textAppearance="?android:attr/textAppearanceLarge"
	                    android:textColor="#000" />
	            </TableRow>

	            <TableRow
	                android:id="@+id/tableRow6"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_weight="0.5" >

	                <LinearLayout
	                    android:id="@+id/linearLayout4"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="0.5"
	                    android:orientation="vertical" >
	                </LinearLayout>

	                <LinearLayout
	                    android:id="@+id/linearLayout5"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="0.5"
	                    android:orientation="vertical" >
	                </LinearLayout>
	            </TableRow>

	            <TableRow
	                android:id="@+id/tableRow7"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content" >

	                <TextView
	                    android:id="@+id/textView05"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_marginBottom="1dp"
	                    android:layout_marginLeft="1dp"
	                    android:layout_marginRight="1dp"
	                    android:layout_weight="0.5"
	                    android:background="@drawable/grauverlauf"
	                    android:text="@string/friday"
	                    android:textAppearance="?android:attr/textAppearanceLarge"
	                    android:textColor="#000" />

	                <TextView
	                    android:id="@+id/textView06"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_marginBottom="1dp"
	                    android:layout_marginLeft="1dp"
	                    android:layout_marginRight="1dp"
	                    android:layout_weight="0.5"
	                    android:background="@drawable/grauverlauf"
	                    android:text="@string/weekend"
	                    android:textAppearance="?android:attr/textAppearanceLarge"
	                    android:textColor="#000" />
	            </TableRow>

	            <TableRow
	                android:id="@+id/tableRow9"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content" >

	                <LinearLayout
	                    android:id="@+id/linearLayout6"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="0.5"
	                    android:orientation="vertical" >
	                </LinearLayout>

	                <LinearLayout
	                    android:id="@+id/linearLayout7"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="0.5"
	                    android:orientation="vertical" >
	                </LinearLayout>
	            </TableRow>
	        </TableLayout>


	</ScrollView>
    